<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_add_city"
        android:checked="true"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/menu_add_city"/>

    <item
        android:title="@string/navigation_account_subheader">
        <menu>

            <item
                android:icon="@drawable/ic_account_circle_24dp"
                android:title="@string/navigation_account_edit"/>

            <item
                android:icon="@drawable/ic_help_24dp"
                android:title="@string/navigation_account_help_title"/>

            <item
                android:id="@+id/navigation_account_logout"
                android:icon="@drawable/ic_exit_to_app_24dp"
                android:title="@string/logout_title"/>
        </menu>
    </item>
</menu>

