<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:elevation="@dimen/z_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/action_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <io.romain.passport.ui.views.SquareLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@android:string/untitled"
                        android:src="@drawable/no_icon_profile"/>
                </io.romain.passport.ui.views.SquareLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/edit_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/edit_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_hint_name"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:nextFocusDown="@+id/edit_last_name"
                            android:singleLine="true"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/edit_email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_hint_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:nextFocusDown="@+id/edit_password"
                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:id="@+id/permission_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_accounts_permission_message"
                        style="@style/Widget.Passport.HintCheckBox" />

                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <io.romain.passport.ui.views.PasswordEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_visibility_24dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/register_hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_button_register"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_register"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>